Modification of the decomposition subtool for processing several MS input files + parallelization